--- a/PROGRAMACION/ud1/ejercicios/Relacion3/Relacion4/ejercicio1_bucle.html
+++ b/PROGRAMACION/ud1/ejercicios/Relacion3/Relacion4/ejercicio1_bucle.html
@@ -10,7 +10,7 @@
     for (let i = 0; i <10; i++) {
         interacion = i +1
         multiplicacion = numeroUsuario * interacion
-        console.log (numeroUsuario + "X" + interacion + "=" +  multiplicacion) 
+        console.log (numeroUsuario + "x" + interacion + " = " +  multiplicacion) 
     }
     
 
