--- a/PROGRAMACION/ud1/ejercicios/Relacion5/Ejercicio11.html
+++ b/PROGRAMACION/ud1/ejercicios/Relacion5/Ejercicio11.html
@@ -1,12 +1,14 @@
 <script>
     let numero1 = Number(prompt("Dime un número"))
     let numero2 = Number(prompt("Dime otro número"))
-    if (numero1 <= numero2) {
-        for (let i = numero1; i <= numero2; i++) {
+    if (numero1 <=numero2) {
+        //i-=1 o i=i-1 o i--
+        for (let i = numero2; i >= numero1; i--) {
             console.log(i)
         }
     } else {
         console.log("El primer número debe ser menor")
     }
-    
+
 </script>
+
