--- a/PROGRAMACION/ud1/ejercicios/Relacion5 (bucles)/Ejercicio34.html
+++ b/PROGRAMACION/ud1/ejercicios/Relacion5 (bucles)/Ejercicio34.html
@@ -1,7 +1,7 @@
 <script>
     let numero = prompt("Dime un número")
     numero = Number(numero)
-    contador = 2
+    let contador = 2
 
     while (numero % contador != 0) {
         contador++
