--- a/LM/UD2/ejercicio1.html
+++ b/LM/UD2/ejercicio1.html
@@ -8,32 +8,31 @@
   <body>
     <header>
       <h1>Gasolinera La Ruta</h1>
-      <nav>
+      <nav id="inicio">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Servicios</a></li>
-          <li><a href="contact.html">Promociones</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="#Inicio">Inicio</a></li>
+          <li><a href="#Servicios">Servicios</a></li>
+          <li><a href="#Promociones">Promociones</a></li>
+          <li><a href="#Contacto">Contacto</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section>
+      <section id="Servicios">
         <h2>Nuestros servicios</h2>
         <p>
           Repostaje de combustible, tienda de conveniencia, lavado de autos, y
           más".
         </p>
       </section>
-      <section>
+      <section id="Promociones">
         <h2>Promociones del mes</h2>
         <p>"Descuento del 10% en el lavado de autos todos los martes."</p>
       </section>
     </main>
-    <footer>
+    <footer id="Contacto">
       <p>"Derechos reservados © 2024 Gasolinera La Ruta".</p>
-      <a href="https://www.gasolineralaruta.es">Enlace a Renfe</a>
+      <a href="mailto:manu@gasolineralaruta.es">Enlace a Renfe</a>
     </footer>
   </body>
-  
 </html>
