--- a/LM/UD2/Para hacer en casa/fotocopiadora.html
+++ b/LM/UD2/Para hacer en casa/fotocopiadora.html
@@ -32,7 +32,8 @@
             <blockquote>
                 "Este es un <b>ejemplo</b> de una cita larga."
             </blockquote>
-            <a href="https://www.renfe.com/es/es">Enlace a Renfe</a> 
+            <a 
+            href="https://www.renfe.com/es/es">Enlace a Renfe</a> 
             <a href="mailto:a@a.com">Correo a A</a>
         </section>
     </main>
