añado ejercicio cabrera

--- a/LM/UD2/Para hacer en casa/Trabajo_AquaExpress/plantilla_comentada.html
+++ b/LM/UD2/Para hacer en casa/Trabajo_AquaExpress/plantilla_comentada.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
+<!-- Indica que el documento usa la versión HTML5 -->
+
 <html lang="es">
+<!-- Especifica el idioma del contenido de la página -->
 
 <head>
     <meta charset="UTF-8">
+    <!-- Permite el uso de caracteres especiales como tildes y ñ -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Hace la web adaptable a móviles -->
+
     <meta name="description" content="Esta es una página web de ejemplo.">
+    <!-- Descripción que aparece en buscadores como Google -->
+
     <title>Aguas AquaExpress</title>
+    <!-- Título que se mostrará en la pestaña del navegador -->
+
     <link rel="stylesheet" href="styles.css">
+    <!-- Vincula el archivo CSS externo donde está el estilo -->
 </head>
 
 <body>
+    <!-- Todo el contenido visible al usuario va dentro del body -->
+
     <header id="index">
-        <h1><b>AquaExpress, tu agua de confianza<b></h1>
+        <!-- Encabezado principal de la página con navegación -->
+
+        <h1><b>AquaExpress, tu agua de confianza</b></h1>
+        <!-- Título principal -->
+
         <figure>
+            <!-- Elemento que agrupa una imagen con su descripción -->
             <img src="Imágenes/Logo_ AquaExpress.jpg" width="600" height="400">
+            <!-- Imagen del logo -->
             <figcaption>Disfruta del agua de manantial</figcaption>
+            <!-- Texto que describe la imagen -->
         </figure>
+
         <nav>
+            <!-- Menú de navegación para moverse por la página -->
             <ul>
+                <!-- Lista ordenada de enlaces -->
                 <li><a href="#index">Índice</a></li>
                 <li><a href="#about">Sobre nosotros</a></li>
                 <li><a href="#galeria">Galería</a></li>
@@ -28,8 +52,10 @@
     </header>
 
     <main>
+        <!-- Contenido principal de la web -->
 
         <section id="about">
+            <!-- Sección de servicios -->
             <h2><b>Servicios que realizamos</b></h2>
             <p>Disfruta de los servicios que tenemos para lavado de coches</p>
             <ul>
@@ -41,6 +67,7 @@
         </section>
 
         <section id="galeria">
+            <!-- Sección de imágenes o galería -->
             <h2><b>Sección de imágenes</b></h2>
 
             <figure>
@@ -55,17 +82,23 @@
                     height="400">
             </figure>
         </section>
-
     </main>
 
     <footer id="contact">
+        <!-- Zona del pie de página con información de contacto -->
         <h2>Contacto</h2>
-        <p><a href="www.aquaexpress.es" target="_blank">Visita mi página web</a></p>
-        <p><a href=mailto:manuel@aquaexpress.es>Correo a Manuel</a></p>
+
+        <p><a href="https://www.aquaexpress.es" target="_blank">Visita mi página web</a></p>
+        <!-- Enlace a la web (añadido https:// para que funcione correctamente) -->
+
+        <p><a href="mailto:manuel@aquaexpress.es">Correo a Manuel</a></p>
+        <!-- Enlace que abre directamente el cliente de correo -->
+
         <p><a href="https://maps.app.goo.gl/6BdciBz7ExvKXqbV8" target="_blank">Localización</a></p>
+        <!-- Enlace que abre Google Maps en una nueva pestaña -->
 
         <p>&copy; 2024 Mi página web. Todos los derechos reservados.</p>
-
+        <!-- Derechos de autor -->
     </footer>
 
 </body>
