--- a/PROGRAMACION/ud2_(repito en clase)/Relación 1/ej16_while.html
+++ b/PROGRAMACION/ud2_(repito en clase)/Relación 1/ej16_while.html
@@ -2,7 +2,9 @@
 
 let secuencia =[]
 
-for (let i=1; i<=5; i++) {
+const CANTIDADNUMEROS = 5
+
+for (let i=1; i<=CANTIDADNUMEROS; i++) {
 
 secuencia.push(i)
 
