actualizado todo en clase

--- a/LM/UD2/Para hacer en casa/ProyectoCopyMaster/index.html
+++ b/LM/UD2/Para hacer en casa/ProyectoCopyMaster/index.html
@@ -45,17 +45,27 @@
 
             <figure>
                 <figcaption>El mejor fotocopiado a color</figcaption>
-                <img src="img/copias-color.jpg" alt="Aparece un cartel de fotocopias a color"
-                    width="600" height="400">
+                <img src="img/copias-color.jpg" alt="Aparece un cartel de fotocopias a color" width="600" height="400">
             </figure>
 
             <figure>
                 <figcaption>Impresiones 3D</figcaption>
-                <img src="img/3D.jpeg" alt="Aparece una impresora 3D" width="600"
-                    height="400">
+                <img src="img/3D.jpeg" alt="Aparece una impresora 3D" width="600" height="400">
             </figure>
+
+            <figure>
+                <figcaption>Impresiones 3D</figcaption>
+                <video src="video/video.mp4" alt="Aparece un vídeo" controls width="600" height="400">
+            </figure>
+
+            <figure>
+                <figcaption>Impresiones 3D</figcaption>
+                <a href="media/MiPlan-1.pdf" download alt="Aparece un pdf">Descargar PDF</a>
+            </figure>
+
             <blockquote>
-                <p>"La satisfacción de nuestros clientes, es nuestro aval"</p>
+                "La satisfacción de nuestros clientes, es nuestro aval" // ## opiniones, reseñas
+                <br> -Manuel</br> ## Es la opinón de arriba
             </blockquote>
         </section>
 
@@ -64,7 +74,7 @@
     <footer id="contact">
         <h2>Contacto</h2>
         <p><a href="www.copymaster.es" target="_blank">Visita mi página web</a></p>
-        <p><a href=mailto:manuel@aquaexpress.es>Correo a Manuel</a></p>
+        <p><a href=mailto:manuel@copymaster.es>Correo a Manuel</a></p>
         <p><a href="https://maps.app.goo.gl/6BdciBz7ExvKXqbV8" target="_blank">Localización</a></p>
 
         <p>&copy; 2024 Mi página web. Todos los derechos reservados.</p>
