--- a/LM/UD3/ejercicio_listas.html
+++ b/LM/UD3/ejercicio_listas.html
@@ -59,6 +59,22 @@
         <li>Cerveza</li>
         <li>Coches clásicos</li>
     </ul>
+
+    <ul>
+    <ol>
+        <li>Titanic</li>
+        <li>Inspector Gadget</li>
+        <li>Lo que el viento se llevó</li>
+    </ol>
+
+    <ul>
+        <li>Jiu Jitsu</li>
+        <li>Cerveza</li>
+        <li>Coches clásicos</li>
+    </ul>
+    </ul>
+
+    </ul>
 </body>
 </html>
 
