--- a/PROGRAMACION/ud2/Relación 1/ej16_while.html
+++ b/PROGRAMACION/ud2/Relación 1/ej16_while.html
@@ -4,9 +4,9 @@ let secuencia =[]
 
 const CANTIDADNUMEROS = 5
 
-for (let i=1; i<=CANTIDADNUMEROS; i++) {
+while(secuencia!= CANTIDADNUMEROS){
 
-secuencia.push(i)
+secuencia.push()
 
 }
 console.log(secuencia)
