--- a/PROGRAMACION/ud3/Relación 1/R1_ej5.html
+++ b/PROGRAMACION/ud3/Relación 1/R1_ej5.html
@@ -1,7 +1,8 @@
 <script>
 
     //Escribe una función llamada caraOCruz que devuelva "Cara" o "Cruz" al azar. 
-    // Luego, crea otra función llamada listaCarasOCruces que use caraOCruz 10 veces para generar una lista de 10 resultados de "Cara" o "Cruz".
+    // Luego, crea otra función llamada listaCarasOCruces que use caraOCruz 10 veces para generar una 
+    // lista de 10 resultados de "Cara" o "Cruz".
 
 
     function caraOcruz() {
