--- a/PROGRAMACION/ud3/Relación 1/R1_ej7.html
+++ b/PROGRAMACION/ud3/Relación 1/R1_ej7.html
@@ -1,16 +1,29 @@
 <script>
 
 
-//Crea una función juegoAdivinaNumero que genere un número aleatorio entre 1 y 10. 
-// Pídele al usuario que adivine el número, y dile si el número que ingresó es menor, mayor o igual al número generado.
+    //Crea una función juegoAdivinaNumero que genere un número aleatorio entre 1 y 10. 
+    // Pídele al usuario que adivine el número, y dile si el número que ingresó es 
+    // menor, mayor o igual al número generado.
 
-function juegoAdivinaNumero(numero){
-    let aleatorio = Math.floor(Math.random() * numero) + 1
-    return aleatorio
+    function juegoAdivinaNumero(numero) {
 
-}
+        let aleatorio = Math.floor(Math.random() * 10) +1
 
-aleatorio(juegoAdivinaNumero())
+        
+            if (numero == aleatorio) {
+                alert("acertaste")
+            } else if (numero < aleatorio) {
+                alert("El número es menor")
+            } else {
+                alert("El número es mayor")
+            }
+            return aleatorio
+        }
+       
+
+    let numero = Number(prompt("Dime un número"))
+
+    console.log(juegoAdivinaNumero(numero))
 
 
 </script>
