--- a/LM/DOM/Relacion1/Ejercicio 1 - Zoológico/index.html
+++ b/LM/DOM/Relacion1/Ejercicio 1 - Zoológico/index.html
@@ -12,6 +12,6 @@
     <div class="animal">Elefante</div>
     <button id="resaltarAnimales">Resaltar Animales</button>
 
-    <script src="zoo.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
