--- a/LM/DOM/Relacion2/Ejercicio2 - Cambio imagen/index.html
+++ b/LM/DOM/Relacion2/Ejercicio2 - Cambio imagen/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias Express</title>
+    <title>Noticia Destacada</title>
 </head>
 <body>
-    <h1 id="titulo">Noticias de Hoy</h1>
-    <h2 id="subtitulo">Las noticias más importantes del día</h2>
-    
+    <h1>Noticia Principal</h1>
+    <img id="imagen" src="imagen1.jpg" alt="Imagen de la noticia" width="600">
+
     <script src="script.js"></script>
 </body>
 </html>
-
