--- a/LM/DOM/Relacion2/Ejercicio5 - Generar noticias/index.html
+++ b/LM/DOM/Relacion2/Ejercicio5 - Generar noticias/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias Express</title>
+    <title>Noticias Generadas</title>
 </head>
 <body>
-    <h1 id="titulo">Noticias de Hoy</h1>
-    <h2 id="subtitulo">Las noticias más importantes del día</h2>
-    
+    <h1>Noticias Generadas</h1>
+    <div id="contenedor"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
-
